--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:text="Add New Habit" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/habitRecyclerView"
+        android:id="@+id/habitListRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
